Fix table overflow-x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,6 +83,9 @@ a {
   text-decoration: none;
 }
 
+.table-container {
+  overflow-x: auto;
+}
 table {
   width: 100%;
 }
